# proviras-sdk

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: publish-python.yml  publish.yml
proviras_sdk/: __init__.py
python/: README.md  pyproject.toml
python/proviras_sdk/: __init__.py  _sdk.py  _tracer.py
references/: config.md  payload-schema.md
scripts/: log.sh  register.sh
src/: cli.ts  index.ts
