[project]
name = "proviras-sdk"
version = "2.1.2"
description = "Proviras tracing SDK for LangGraph and LangChain agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "ISC" }
authors = [{ name = "Proviras" }]
keywords = ["langgraph", "langchain", "tracing", "observability", "proviras"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "langchain-core>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/Proviras-ai/proviras-sdk"
Repository = "https://github.com/Proviras-ai/proviras-sdk.git"
Issues = "https://github.com/Proviras-ai/proviras-sdk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proviras_sdk"]
